<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/nav_title_common">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@id/expenseFragment"
                    android:icon="@drawable/ic_nav_expenses"
                    android:title="@string/nav_expense" />
                <item
                    android:id="@id/incomeFragment"
                    android:icon="@drawable/ic_nav_income"
                    android:title="@string/nav_income" />
                <item
                    android:id="@id/expenseStatisticsFragment"
                    android:icon="@drawable/ic_nav_expense_statistics"
                    android:title="@string/nav_expense_statistics" />
                <item
                    android:id="@id/incomeStatisticsFragment"
                    android:icon="@drawable/ic_nav_income_statistics"
                    android:title="@string/nav_income_statistics" />
            </group>
        </menu>
    </item>
    <item android:title="@string/nav_title_setting">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@id/accountListFragment"
                    android:icon="@drawable/ic_nav_account_management"
                    android:title="@string/nav_account_management" />
                <item
                    android:id="@id/expenseCategoryMgmtFragment"
                    android:icon="@drawable/ic_nav_category_management"
                    android:title="@string/nav_expense_category_management" />
                <item
                    android:id="@id/incomeCategoryMgmtFragment"
                    android:icon="@drawable/ic_nav_category_management"
                    android:title="@string/nav_income_category_management" />
                <item
                    android:id="@id/accountingNotificationFragment"
                    android:icon="@drawable/ic_nav_accounting_notification"
                    android:title="@string/nav_accounting_notification" />
            </group>
        </menu>
    </item>

    <item android:title="@string/nav_title_others">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@id/aboutFragment"
                    android:icon="@drawable/ic_nav_about"
                    android:title="@string/nav_about" />
            </group>
        </menu>
    </item>
</menu>
