<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    tools:context="com.ogl4jo3.accounting.ui.accountMgmt.AccountMgmtFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_account"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_width="match_parent" />

    <Button
        style="@style/Normal_btn"
        android:id="@+id/btn_new"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/btn_add" />

</LinearLayout>
